fix image stuff
