# api/swagger/api/v1/tempus/tempus.swagger.json
@@ -389,6 +389,44 @@
         ]
       }
     },
+    "/v1/exercises/{exerciseId}/images/{imageId}": {
+      "get": {
+        "operationId": "ExerciseService_GetExerciseImage",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ExerciseImage"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "exerciseId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "imageId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "ExerciseService"
+        ]
+      }
+    },
     "/v1/exercises/{exerciseId}/links": {
       "post": {
         "summary": "Add a link to an exercise",
